--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,12 @@
 	</head>
 	<body>
 		<h1>Lasagna</h1>
+		<img
+			src="https://www.allrecipes.com/thmb/golmLzT4rSJfJ6QRi4e0G_82mDc=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg"
+			alt="Image of the best lasagna"
+			width="400px"
+			height="400px"
+		/>
 		<p>
 			This lasagna recipe takes a little work, but it is so satisfying and
 			filling that it's worth it!
@@ -44,5 +50,27 @@
 				when you cut into it.
 			</li>
 		</ul>
+		<h2>Steps</h2>
+		<h3>Step-By-Step guide</h3>
+		<ol>
+			<li>Make the meat sauce.</li>
+			<li>Cook the noodles</li>
+			<li>Make the ricotta mixture</li>
+			<li>Layer the lasagna according to the recipe instructions.</li>
+			<li>Cover with foil and bake.</li>
+			<li>Let the lasagna rest before serving.</li>
+		</ol>
+		<h3>How to layer Lasagna</h3>
+		<ol>
+			<li>Meat sauce</li>
+			<li>Noodles</li>
+			<li>Ricotta mixture</li>
+			<li>Mozzarella slices</li>
+			<li>Meat sauce</li>
+			<li>Parmesan cheese</li>
+			<li>Repeat the layers, then top with the remaining Parmesan.</li>
+		</ol>
+
+		<a href="../index.html">Home</a>
 	</body>
 </html>
